// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: test.cjs format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.cts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.js format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.jsx format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.mjs format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.mts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.ts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T>() => {};

================================================================================
`;

exports[`snippet: test.tsx format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.unknown format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: unnamed format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;
